# mc-server-interaction

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
mc_server_interaction/: __init__.py  cli_interface.py  exceptions.py  log.py  models.py  paths.py  process_handler.py  property_handler.py  server_interaction.py  server_process.py  utils.py
mc_server_interaction/interaction/: __init__.py  models.py  property_handler.py  server_interaction.py  server_process.py  worlds.py
mc_server_interaction/manager/: __init__.py  backup_manager.py  data_store.py  models.py  server_manager.py  spigot.py  utils.py
mc_server_interaction/mc_server_interaction/: models.py  property_handler.py  server_interaction.py
mc_server_interaction/server_manger/: data_store.py  game_constants.py  models.py  server_manager.py  utils.py
mc_server_interaction/utils/: files.py  singleton.py
server_manager/: __init__.py  cli_interface.py  exceptions.py  log.py  paths.py  server_manager.py  utils.py
server_manager/mc_server_interaction/: Exceptions.py  __init__.py  exceptions.py  models.py  property_handler.py  server_interaction.py  server_process.py
server_manager/server_manger/: data_store.py  models.py  server_manager.py  utils.py
tests/: test_server.py
