[tool.poetry]
name = "mc-server-interaction"
version = "0.1.0"
description = "Module for interacting with Minecraft servers"
authors = ["Dummerle", "M0rica"]
license = "GPL 3.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
