[tool.poetry]
name = "mc_server_interaction"
version = "0.1.0"
description = "Module for interacting with Minecraft servers"
authors = ["Dummerle", "M0rica"]
license = "GPL 3.0"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.11.1"
mcstatus = "^9.4.0"
cached-property = "^1.5.2"
psutil = "^5.9.1"
aiofile = "^3.8.1"
aiohttp = "^3.8.1"
aioconsole = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
